--- a/Co-Author App/CanvasManifest.json
+++ b/Co-Author App/CanvasManifest.json
@@ -10,7 +10,7 @@
     "MSAppStructureVersion": "2.0"
   },
   "Properties": {
-    "AppCopilotSchemaName": null,
+    "AppCopilotSchemaName": "",
     "AppCreationSource": "AppFromScratch",
     "AppDescription": "",
     "AppPreviewFlagsMap": {
@@ -118,7 +118,7 @@
     "Id": "2123575a-65ab-4a22-a61e-59700f032bf1",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "",
-    "ManualOfflineProfileId": null,
+    "ManualOfflineProfileId": "",
     "Name": "Co-Author App",
     "OriginatingVersion": "1.343",
     "ParserErrorCount": 0,
