--- a/Co-Author App/CanvasManifest.json
+++ b/Co-Author App/CanvasManifest.json
@@ -12,7 +12,7 @@
   "Properties": {
     "AppCopilotSchemaName": "",
     "AppCreationSource": "AppFromScratch",
-    "AppDescription": "",
+    "AppDescription": "new button added",
     "AppPreviewFlagsMap": {
       "aibuilderserviceenrollment": false,
       "allowmultiplescreensincanvaspages": false,
